# skill-project-management

./: .gitignore  README.md  pyproject.toml  requirements.txt  skill-project-management-SKILL.md  skill.json  system_prompt.txt
examples/: continuous_job.py  one_time_project.py  recurring_job.py
skill_project_management.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py  persistence.py  reporting.py  scheduler.py  skill.py
src/engine/: __init__.py  async_execution_loop.py  blocker_manager.py  execution_loop.py  priority.py
src/models/: __init__.py  job_types.py  project.py  task.py
src/skill_project_management.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_execution_loop.py  test_persistence.py  test_project.py  test_reporting.py  test_scheduler.py  test_task.py
